2015-11-05 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Fix option -iso. The -iso option was misinterpreted
	  as a corrupted -i option. Thanks to report of Ulf-Dietrich Braumann.
	* test/iso.t: Added two tests for option -iso.

2015-10-09 Rafael Fontenelle <rffontenelle@gmail.com>
	* po/pt_BR.po: Updated Brazilian Portuguese translation.
	* man/pt_BR.po/man1/dos2unix.po: Updated Brazilian Portuguese translation.

2015-10-01 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Fix compilation for MSYS 1.

2015-09-30 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 7.3.1

2015-09-23 Erwin Waterlander <waterlan@xs4all.nl>
	* man/man1/dos2unix.pod: Added two examples for option -i, --info.
	* po/*.po: Updated several translations. See README.txt.

2015-09-05 zwpwjwtz <zwpwjwtz@126.com>
	* man/zh_CN/man1/dos2unix.po: New simplified Chinese translation of the manual.

2015-09-03 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Skip UTF-16 files when UTF-16 conversion is not supported.
	  Do not even try to convert. Conversion could go wrong when the
	  UTF-16 file has no 8-bit binary symbols.

2015-09-02 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Fix message printed, when dos2unix without Unicode support
	  converts an UTF-16 file with only a BOM and no text. Output format was not
	  printed. This fixed compile warning "unused parameter 'lout'".
	* common.h: Fixed compile warning "implicit declaration of function 'd2u_printf'"
	  when Unicode support is disabled.

2015-09-02 Baruch Siach
	* common.c: Fix compilation error "'wchar_t' undeclared"
	  when Unicode support is disabled.

2015-08-31 zwpwjwtz <zwpwjwtz@126.com>
	* po/zh_CN.po: New simplified Chinese translation.

2015-08-26 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c, mingw.mak: Fix compilation for mingw.org.

2015-08-24 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 7.3

2015-08-15 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Fix: Options -ul and -ub caused option -i to